# certchallenge

./: .gitignore  LOOM-VIDEO.md  PROJECT_ANSWERS.md  Project_Planning_Document.md  README.md
RAG Documents/: 10_term_life_insurance_guide.txt  11_modern_portfolio_theory_life_insurance.txt  12_compliance_regulations.txt  (+31 more)
financial_advisor_assistant/: README.md  README_advanced_retrieval_evaluation.md  app.py  app_langgraph.py  env_example.txt  evaluate_bm25.py  evaluate_ensemble.py  evaluate_multi_query.py  evaluate_parent_document.py  evaluate_system.py  load_data.py  prepare_shared_state.py  pyproject.toml  ragas_evaluation_step_by_step.py  run_golden_dataset_evaluation.py  setup.py  test_langgraph_simple.py  test_langsmith.py  test_multi_agent.py
financial_advisor_assistant/agents/: __init__.py  calculator_agent.py  orchestrator.py  portfolio_agent.py  query_router.py  rag_agent.py  research_agent.py
financial_advisor_assistant/agents/graph/: __init__.py  graph_builder.py  state.py  supervisors.py
financial_advisor_assistant/agents/teams/: __init__.py  analysis_team.py  research_team.py  tools.py
financial_advisor_assistant/config/: __init__.py  settings.py
financial_advisor_assistant/retrieval/: __init__.py  contextual_compression.py  ensemble.py  hybrid_search.py  multi_query.py  parent_document.py  semantic_chunking.py
financial_advisor_assistant/shared_state/: documents.pkl  golden_dataset.csv  split_documents.pkl  vector_store_info.pkl
financial_advisor_assistant/utils/: __init__.py  chunking.py  confidence.py  file_processing.py  rate_limiter.py
